[package]
name = "reproto-backend-openapi"
version = "0.4.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/reproto/reproto"
homepage = "https://github.com/reproto/reproto"
documentation = "https://docs.rs/reproto-backend-openapi"
description = """
Rethinking Protocol Generators OpenAPI Backend
"""

[dependencies]
backend = {package = "reproto-backend", path = "../backend", version = "0.4"}
core = {package = "reproto-core", path = "../core", version = "0.4"}
trans = {package = "reproto-trans", path = "../trans", version = "0.4"}
manifest = {package = "reproto-manifest", path = "../manifest", version = "0.4"}
naming = {package = "reproto-naming", path = "../naming", version = "0.4"}

log = "0.4.8"
serde = {version = "1.0.111", features = ["derive"]}
yaml = {package = "serde_yaml", version = "0.8.12"}
json = {package = "serde_json", version = "1.0.53"}
toml = "0.5.6"
linked-hash-map = { version = "0.5.3", features = ["serde_impl"] }
