[package]
name = "reproto-backend-reproto"
version = "0.3.16"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/reproto/reproto"
homepage = "https://github.com/reproto/reproto"
documentation = "https://docs.rs/reproto-derive"
description = """
Rethinking Protocol Generators

reproto backend for reproto

this crate writes a schema out as a schema again.
"""

[dependencies]
reproto-backend = {path = "../backend", version = "0.3"}
reproto-core = {path = "../core", version = "0.3"}
reproto-trans = {path = "../trans", version = "0.3"}
reproto-lexer = {path = "../lexer", version = "0.3"}
reproto-manifest = {path = "../manifest", version = "0.3"}

genco = "0.3"
toml = "0.4"
log = "0.3"

[lib]
path = "lib.rs"
