[package]
name = "reproto-backend-reproto"
version = "0.4.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/reproto/reproto"
homepage = "https://github.com/reproto/reproto"
documentation = "https://docs.rs/reproto-derive"
description = """
Rethinking Protocol Generators

reproto backend for reproto

this crate writes a schema out as a schema again.
"""

[dependencies]
backend = {package = "reproto-backend", path = "../backend", version = "0.4"}
reproto-core = {path = "../core", version = "0.4"}
trans = {package = "reproto-trans", path = "../trans", version = "0.4"}
lexer = {package = "reproto-lexer", path = "../lexer", version = "0.4"}
manifest = {package = "reproto-manifest", path = "../manifest", version = "0.4"}

genco = "0.17.0"
toml = "0.5.9"
log = "0.4.17"

[lib]
path = "lib.rs"
