[package]
name = "reproto-backend-swift"
version = "0.4.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/reproto/reproto"
homepage = "https://github.com/reproto/reproto"
documentation = "https://docs.rs/reproto-backend-swift"
description = """
Rethinking Protocol Generators
"""

[dependencies]
backend = {package = "reproto-backend", path = "../backend", version = "0.4"}
reproto-core = {path = "../core", version = "0.4"}
manifest = {package = "reproto-manifest", path = "../manifest", version = "0.4"}
naming = {package = "reproto-naming", path = "../naming", version = "0.4"}
trans = {package = "reproto-trans", path = "../trans", version = "0.4"}

genco = "0.16.1"
log = "0.4.17"
serde = { version = "1.0.137", features = ["derive"] }
toml = "0.5.9"
